@@ -1,5 +1,9 @@
 2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* media.cpp|h: Remove unused methods.
+
+2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* debug.cpp: Add an env var to sleep for eternity after a crash, to make it
 	easier to attach gdb.
 
